[package]
name = "basecamp"
version = "1.19.0"
edition = "2021"
description = "KM5E's Base Camp — POTA, SOTA & DX Spot Browser with N3FJP AC Log integration"
authors = ["Craig KM5E"]

[[bin]]
name = "basecamp"
path = "src/main.rs"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
image = "0.25"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
open = "5"

[build-dependencies]
winres = "0.1"
image = "0.25"
ico = "0.3"

[profile.release]
opt-level = 2
